--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.16.2",
     "express-graphql": "^0.6.11",
     "express-jwt": "^5.3.0",
+    "express-validator": "^6.14.0",
     "firebase-admin": "^5.1.0",
     "graphql": "^0.11.7",
     "jsonwebtoken": "^8.1.0",
@@ -32,6 +33,7 @@
     "nodemailer": "^2.3.2",
     "request": "^2.72.0",
     "sanitize-filename": "^1.6.1",
+    "uuid": "^8.3.2",
     "validator": "^9.0.0",
     "winston": "^2.3.1"
   },
