--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
     "start": "nodemon app.js",
     "generate:user": "node utilities/generate-user.js",
     "mongo:backup": "node database/utilities/mongodb-backup.js",
-    "mongo:restore": "node database/utilities/mongodb-restore.js"
+    "mongo:restore": "node database/utilities/mongodb-restore.js",
+    "make:schema": "node database/middleware/generateSchema.js"
   },
   "author": "ferdian <ferdisatria15@gmail.com>",
   "dependencies": {
@@ -28,6 +29,7 @@
     "firebase-admin": "^5.1.0",
     "graphql": "^0.11.7",
     "jsonwebtoken": "^8.1.0",
+    "line-replace": "^2.0.1",
     "lodash": "^4.12.0",
     "mime": "^1.3.6",
     "moment": "^2.18.1",
