--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "aws-sdk": "^2.100.0",
     "bcrypt-nodejs": "^0.0.3",
     "body-parser": "^1.15.1",
+    "cli-columns": "^4.0.0",
     "connect-mongo": "^1.1.0",
     "connect-timeout": "^1.9.0",
     "cors": "^2.8.5",
