--- a/.gitignore
+++ b/.gitignore
@@ -36,7 +36,7 @@ build/Release
 
 # Dependency directories
 node_modules/
-server/database/backup
+src/server/database/backup
 jspm_packages/
 
 # Typescript v1 declaration files
