fix name package.json

--- a/src/dashboard/package.json
+++ b/src/dashboard/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "NodejsMongoDB",
+    "name": "NodejsDashboard",
     "version": "0.0.1",
     "scripts": {
       "dashboard:dev": "next dev",
